# GaiaX

./: .gitmodules  CMakeLists.txt  README.md
exports/: GaiaInstance.hpp  GraphicsEngine.hpp  IGraphicsEngine.hpp  Renderer.hpp  SUtility.hpp
includes/: CameraManager.hpp  Gaia.hpp  InstanceManager.hpp  MemoryContainer.hpp  ShareableAddress.hpp  SharedAddress.hpp  UploadContainer.hpp
includes/D3D/: AddressContainer.hpp  BindInstanceGFX.hpp  BufferManager.hpp  BufferView.hpp  CPUAccessibleStorage.hpp  CPUWriteAddressManager.hpp  CommandListManager.hpp  CommandQueueManager.hpp  ComputePipelineIndirectDraw.hpp  ConstantBuffer.hpp  CopyQueueManager.hpp  D3DBuffer.hpp  D3DCommandList.hpp  D3DCommandQueue.hpp  D3DDebugLogger.hpp  D3DDescriptor.hpp  D3DDescriptorView.hpp  D3DFence.hpp  D3DHeaders.hpp  D3DHeap.hpp  D3DHelperFunctions.hpp  D3DPipelineObject.hpp  D3DResource.hpp  D3DResourceBarrier.hpp  D3DResourceBuffer.hpp  D3DResourceManager.hpp  D3DSingleResourceManager.hpp  D3DUploadableResourceManager.hpp  DepthBuffer.hpp  DescriptorTableManager.hpp  DeviceManager.hpp  GaiaDataTypes.hpp  GraphicsEngineDx12.hpp  GraphicsPipelineBase.hpp  GraphicsPipelineIndirectDraw.hpp  GraphicsPipelineMeshShader.hpp  GraphicsPipelineVertexShader.hpp  GraphicsQueueManager.hpp  HeapManager.hpp  IBindInstanceGFX.hpp  (+53 more)
includes/D3D/Impl/: BindInstanceGFX.hpp  CPUAccessibleStorage.hpp  CommandListManager.hpp  CopyQueueManager.hpp  D3DBuffer.hpp  D3DHeap.hpp  DepthBuffer.hpp  DescriptorTableManager.hpp  DeviceManager.hpp  GPUBuffer.hpp  GraphicsEngineDx12.hpp  GraphicsQueueManager.hpp  HeapManager.hpp  Shader.hpp  (+15 more)
includes/Exceptions/: D3DExceptions.hpp  D3DThrowMacros.hpp  DebugInfoManager.hpp  GraphicsExceptions.hpp
interfaces/: ConstantBuffer.ixx  D3DHeap.ixx  D3DResource.ixx  RenderPipeline.ixx
src/: CameraManager.cpp  Gaia.cpp  GaiaInstance.cpp  InstanceManager.cpp  MemoryContainer.cpp  StaticDefinitions.cpp  UploadContainer.cpp
src/D3D/: AddressContainer.cpp  BindInstanceGFX.cpp  BufferManager.cpp  CPUAccessibleStorage.cpp  CPUWriteAddressManager.cpp  CommandListManager.cpp  CommandQueueManager.cpp  ComputePipelineIndirectDraw.cpp  ConstantBuffer.cpp  CopyQueueManager.cpp  D3DBuffer.cpp  D3DCommandList.cpp  D3DCommandQueue.cpp  D3DDebugLogger.cpp  D3DDescriptor.cpp  D3DDescriptorView.cpp  D3DFence.cpp  D3DHeap.cpp  D3DHelperFunctions.cpp  D3DPipelineObject.cpp  D3DResource.cpp  D3DResourceBuffer.cpp  D3DResourceManager.cpp  D3DSingleResourceManager.cpp  D3DUploadableResourceManager.cpp  DepthBuffer.cpp  DescriptorTableManager.cpp  DeviceManager.cpp  GPUBuffer.cpp  GraphicsEngineDx12.cpp  GraphicsPipelineBase.cpp  GraphicsPipelineIndirectDraw.cpp  GraphicsPipelineMeshShader.cpp  GraphicsPipelineVertexShader.cpp  GraphicsQueueManager.cpp  HeapManager.cpp  IndexBuffer.cpp  IndexBufferView.cpp  LinearAllocator.cpp  ModelContainer.cpp  (+30 more)
src/Exception/: D3DExceptions.cpp  DebugInfoManager.cpp  Exception.cpp  GraphicsExceptions.cpp
templates/: Exception.hpp  IModel.hpp
test/: CMakeLists.txt
test/Win32/: SimpleWindow.hpp
test/src/: AllocatorTest.cc  BufferTest.cc  CommandQueueTest.cc  CommonBufferTest.cc  D3DSharedBufferTest.cc  DescriptorHeapManagerTest.cc  ExternalResourceTest.cc  ModelManagerTest.cc  RenderEngineTest.cc  RootSignatureDynamicTest.cc  StagingBufferManagerTest.cc  SwapchainTest.cc
